BusOne/src/objects/BOT_Pharamcy_Service__c.object
<CustomObject>
    <description>Used to store the data related to the Pharmacy Service</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the related account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Pharamcy_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <description>Used to display the channel</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Other_Provider_Name__c</fullName>
        <label>Other Provider Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS Pharm/DUR</fullName>
                </value>
                <value>
                    <fullName>Allscripts</fullName>
                </value>
                <value>
                    <fullName>Avella Specialty Pharmacy</fullName>
                </value>
                <value>
                    <fullName>AxelaCare</fullName>
                </value>
                <value>
                    <fullName>Biologics</fullName>
                </value>
                <value>
                    <fullName>Biologics Inc</fullName>
                </value>
                <value>
                    <fullName>Burman`s Specialty Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Centric Health Resources</fullName>
                </value>
                <value>
                    <fullName>Cystic Fibrosis Services</fullName>
                </value>
                <value>
                    <fullName>Diplomat Specialty Pharmacy</fullName>
                </value>
                <value>
                    <fullName>ePocrates</fullName>
                </value>
                <value>
                    <fullName>Foundation Care</fullName>
                </value>
                <value>
                    <fullName>IVSolutions</fullName>
                </value>
                <value>
                    <fullName>Local Pharmacies</fullName>
                </value>
                <value>
                    <fullName>Option Care</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical Specialties Inc</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Surescripts</fullName>
                </value>
                <value>
                    <fullName>US Bioservices Inc</fullName>
                </value>
                <value>
                    <fullName>Wellpartner</fullName>
                </value>
                <value>
                    <fullName>Wellpartner Specialty Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Acro Pharmaceutical Services</fullName>
                </value>
                <value>
                    <fullName>RxCrossroads</fullName>
                </value>
                <value>
                    <fullName>Kroger</fullName>
                </value>
                <value>
                    <fullName>Advanced Care Scripts</fullName>
                </value>
                <value>
                    <fullName>Wellpartner Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Affinity Biotech</fullName>
                </value>
                <value>
                    <fullName>Walgreens</fullName>
                </value>
                <value>
                    <fullName>Kroger Prescription Plans</fullName>
                </value>
                <value>
                    <fullName>AllCare Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_PBM_ID__c</fullName>
        <description>Used to store the PBM ID.</description>
        <label>PBM ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_PBM_Name__c</fullName>
        <description>Used to store the PBM Name.</description>
        <label>PBM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Service_ID__c</fullName>
        <description>Used to store the pharmacy service ID</description>
        <label>Service ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Pharmacy Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BOT_PBM_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pharamcy Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Services</pluralLabel>
    <recordTypes>
        <fullName>Pharmacy_Service</fullName>
        <active>true</active>
        <description>It is used for commercial plans</description>
        <label>Pharmacy Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>